--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "npm_build": "npm run build",
-    "npm_deploy": "gh-pages -d build"
+    "deploy": "gatsby build && gh-pages -d public"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
@@ -49,6 +48,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "gh-pages": "^3.2.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5"
