--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "description": "Personal Webpage Portfolio for DrJack0's Github",
   "version": "1.0.0",
-  "license": "MIT",
   "homepage": "https://drjack0.github.io/",
   "scripts": {
     "build": "gatsby build",
@@ -17,11 +16,13 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "emailjs-com": "^3.2.0",
     "gatsby": "^2.23.7",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.12",
     "gatsby-plugin-offline": "^3.2.11",
     "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-robots-txt": "^1.6.10",
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "^2.6.12",
     "gatsby-source-filesystem": "^2.3.12",
@@ -52,12 +53,5 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
